Added Flight History & Updated all screens